syntax = "proto3";
package sangong;
import "gamecomm.proto";

//通比牛牛玩家信息
message SangongPlayer {
  PlayerInfo  MyInfo = 1;  //其中State
  CardInfo Cards = 2;     //
}

//入场
message SangongSceneResp {
  int64 TimeStamp = 1;              //时间戳
  repeated int32 Chips = 2;         //筹码
  repeated int64 AreaBets = 4;      //各下注区当前总下注额
  repeated int64 MyBets = 5;        //我在各下注区的总下注额
  string Inning = 6;                // 牌局号
  PlayerListInfo AllPlayers = 7;    //玩家列表
  uint64 HostID = 8;              //庄家ID
}

//状态
// 服务端推送
//(空闲 - )
message SangongStateFreeResp {
  TimeInfo Times = 1;
}


//(游戏中 - 下注)
message SangongStatePlayingResp {
  TimeInfo Times = 1;
}

//(发牌)
message SangongStateDealResp {
  TimeInfo Times = 1;
  CardInfo Cards = 2;     // 玩家各自的牌值
}

//(开奖 -- 比牌结果)
message SangongStateOpenResp {
  TimeInfo Times = 1;
  SangongOpenResp OpenInfo = 2;
}

//(结束)
message SangongStateOverResp {
  TimeInfo Times = 1;
}


//准备
message SangongReadyReq {
  bool IsReady = 1; // 玩家准备，可以取消准备
}
message SangongReadyResp {
  uint64 UserId = 1;
}



//下注
message SangongBetReq {
  int32 BetArea = 2;        //下注区域
  int64 BetScore = 3;        //下注金额
}
//下注结果：广播
message SangongBetResp {
  uint64 UserId = 1;
  int32 BetArea = 2;        //下注区域
  int64 BetScore = 3;        //下注金额
}

//开牌
message SangongOpenResp {
  uint64 WinnerId = 1;   //赢家ID
  repeated SangongPlayer Infos = 2;    //玩家的牌值
}

//结算
message SangongOverResp{
  int64 MySettlement = 1;    //个人所得
  repeated int64 TotalSettlement = 2;  //统计：庄家+各区域输赢钱数额结算
}


//----------------------------------------------------------------------------------

//抢庄
message SangongHostReq {
  bool IsWant = 1;  //true上庄 false取消上庄
}
message SangongHostResp {
  uint64 UserID = 1;
  bool IsWant = 2;  //true上庄 false取消上庄
}

//待上庄列表
message SangongHostListReq {

}
message SangongHostListResp {
  PlayerInfo CurHost = 1;        //当前庄家
  repeated uint64 Waitlist = 2;    //待上庄列表
}
